# KZP-circle

./: Anchor.toml  README.md  SETUP.md  SOLANA-DEPLOY-DEBUG-LOG.md  package.json
.devcontainer/: devcontainer.json  setup.sh
playground-native/: Cargo.toml
playground-native/client/: demo.mjs  package.json
programs/agent_rewards/: Cargo.toml
programs/agent_rewards/src/: lib.rs
programs/circle/: Cargo.toml
programs/circle/src/: lib.rs
tests/: agent_rewards.ts  circle.ts
web/: .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/cancel/: route.ts
web/app/api/deposit/: route.ts
web/app/api/fund/: route.ts
web/app/api/reset/: route.ts
web/app/api/run/: route.ts
web/app/api/state/: route.ts
web/app/api/withdraw/: route.ts
web/components/: WalletDeposit.tsx
web/lib/agent/: draft.ts  leads.ts  run.ts
web/lib/circle/: mockClient.ts  onchain.ts  schedule.ts  types.ts
web/lib/mandate/: mockClient.ts  schedule.ts  types.ts
web/lib/rewards/: mockClient.ts  schedule.ts  types.ts
