[package]
name = "kzp_circle"
version = "0.1.0"
edition = "2021"

# Stand alone — this crate is NOT part of the root Anchor workspace.
[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.26"
borsh = "0.10.4"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
# Pin transitive crates whose newest versions require edition2024 (Rust 1.85),
# which the sBPFv1 toolchain's Rust 1.75 can't compile. zeroize must be < 1.4 to
# satisfy curve25519-dalek 3.2.1 (inside solana-program 1.18.26); zeroize_derive is
# pinned so it doesn't jump to its edition2024 release.
zeroize = "=1.3.0"
zeroize_derive = "=1.3.0"

[profile.release]
overflow-checks = true
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
