[package]
name = "agent_rewards"
version = "0.1.0"
description = "USDC escrow that pays an AI agent for cryptographically-attested work"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
