[package]
name = "circle"
version = "0.1.0"
description = "A trustless savings circle (esusu/ajo): points-weighted payouts from a shared vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[lints.rust]
# Anchor 0.30.1 macros reference cfgs newer Rust doesn't know about (custom-heap, etc.).
# These are harmless warnings; silence them so real diagnostics stand out.
unexpected_cfgs = "allow"
